--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,9 @@
+init:
+  - git config --global core.autocrlf true
+
 environment:
   matrix:
-    - nodejs_version: 6.10.2
-
+    - nodejs_version: "6"
 
 platform:
   - x64
@@ -10,11 +12,8 @@ platform:
 shallow_clone: true
 
 install:
-  - ps: Install-Product node $env:nodejs_version $env:Platform
+  - ps: Install-Product node $env:nodejs_version $env:platform
   - node --version
-  - npm --version
-  - SET PATH=%APPDATA%\npm;%PATH%
-  - npm update -g npm
   - npm --version
   - node -e "console.log(process.arch);"
   - npm install
