--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,18 +7,23 @@ environment:
 
 platform:
   - x64
-  - x86
+#  - x86
 
 shallow_clone: true
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
+  - npm install
+
+test_script:
   - node --version
   - npm --version
   - node -e "console.log(process.arch);"
-  - npm install
   - npm test
 
 build: off
 test: off
 deploy: off
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
