--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
 init:
   - git config --global core.autocrlf true
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 environment:
   matrix:
