--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,5 @@
 init:
   - git config --global core.autocrlf true
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 environment:
   matrix:
@@ -12,10 +11,8 @@ platform:
 
 shallow_clone: true
 
-install:
-  - ps: "Install-windowsfeature -name AD-Domain-Services;
-         $password = ConvertTo-SecureString -String \"YX6oio7nHH+a)X1\" -AsPlainText -Force;
-         Install-ADDSForest –DomainName mycompany.local -SafeModeAdministratorPassword $password;"
+#install:
+#  - ps:
 
 build_script:
   - ps: Install-Product node $env:nodejs_version $env:platform
@@ -28,3 +25,6 @@ test_script:
   - npm test
 
 deploy: off
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
