--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,8 +11,9 @@ platform:
 
 shallow_clone: true
 
-#install:
-#  - ps:
+install:
+  - ps: .\scripts\server-setup.ps1
+  - ps: Start-Sleep -s 10
 
 build_script:
   - ps: Install-Product node $env:nodejs_version $env:platform
