--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ shallow_clone: true
 
 install:
   - ps: .\scripts\server-setup.ps1
+  - ps: Restart-Computer -Force
   - ps: Start-Sleep -s 10
 
 build_script:
